fixed responsive behaviour of video container on narrow screens

--- a/styles.css
+++ b/styles.css
@@ -200,16 +200,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .media__header {
-    padding: 1rem;
+    padding: 0.3rem;
     text-align: right;
 }
 
 .media__main {
-    min-width: 450px;
+    min-width: clamp(320px, 450px, 100%);
     display: flex;
     flex-direction: column;
     max-height: 100%;
-    padding: 1rem;
+    padding: 0.3rem;
     flex-grow: 1;
 }
 
